﻿0.2.0 [TBD]
[*] Update Newtonsoft.Json to 10.0 .

0.1.1 [2017-02-13]
[*] Fix reference to Saritasa.Tools.Domain .

0.1.0 [2017-02-11]
[+] Initial release.